SpringApps/app1/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: spring-boot-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.127.0.0.1.nip.io"
