SpringApps/app1/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
    
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - spring-boot-gateway
  http:
  - route:
    - destination:
        host: spring-boot-app
        port:
          number: 80
