SpringApps/app1/spring-boot-app-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: spring-boot-app
  namespace: default
spec:
  host: spring-boot-app
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
