SpringApps/app1/virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-virtualservice
  namespace: default
spec:
  gateways: 
    - spring-boot-gateway
  hosts:
  - "app1.127.0.0.1.nip.io"
  http:
  - route:
    - destination:
        host: spring-boot-app
        port:
          number: 80
